# syxg

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  DEFERRED_PARSING_IMPLEMENTATION.md  DEFERRED_PARSING_OPTIMIZATION_REPORT.md  DOCUMENTATION_FIX_PLAN.md  FEATURE_GAP_ANALYSIS.md  FILE_LIST.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_SUMMARY.md  FIXED_SF2_IMPLEMENTATION.md  IMPLEMENTATION_DOCUMENTATION.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  INTEGRATION_README.md  LICENSE  ON_DEMAND_PARSING_IMPLEMENTATION_SUMMARY.md  OPTIMIZATION_IMPLEMENTATION_PLAN.md  PERFORMANCE_OPTIMIZATION_ROADMAP.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  PYTHON_VERSION_UPGRADE_ANALYSIS.md  QWEN.md  README.md  README_DEFERRED_PARSING.md  README_ON_DEMAND_PARSING.md  README_REFactored.md  README_SF2_REFACTOR.md  REFACTORING_SUMMARY.md  SAMPLE_ACCURATE_ENHANCEMENT.md  SAMPLE_ACCURATE_MIDI_PROCESSING.md  SF2_AUDIT_RESPONSE.md  SF2_CHUNK_STORAGE_REFACTORING.md  SF2_DIRECT_SUBCHUNK_ACCESS_REFACTORING.md  SF2_OPTIMIZATION_SUMMARY.md  SF2_PARSER_IMPROVEMENTS.md  (+114 more)
.github/: dependabot.yml
.qwen/: settings.json
.qwen/agents/: python-coder.md  reviewer.md  tester.md  writer.md
benchmarks/: benchmark_regions.py
deploy/: midi2_deployment_package.py  midi2_package.py
docs/: CONFIGURATION.md  CONTRIBUTING.md  INSTALL.md  MIGRATION_GUIDE.md  Makefile  PYTHON_311_FEATURES.md  README_SFZ_IMPLEMENTATION.md  SART2_API.md  SART2_API_REFERENCE.md  SART2_COMPLIANCE_ASSESSMENT.md  SART2_ENHANCEMENT_PLAN.md  SART2_IMPLEMENTATION_PLAN.md  SART2_INTEGRATION_ASSESSMENT.md  SART2_INTEGRATION_STRATEGY.md  SART2_MIGRATION.md  SART2_NRPN_GUIDE.md  SART2_OBSOLESCENCE_ASSESSMENT.md  SART2_SWITCHING_GUIDE.md  SART2_SYSEX_SPEC.md  SART2_USER_GUIDE.md  STYLE_ENGINE_PLAN.md  STYLE_ENGINE_ROADMAP.md  WORKSTATION.md  XGML_README.md  architecture_refactor_plan.md  audio_buffer_format_standardization_plan.md  conf.py  index.rst  integration_assessment.md  integration_implementation_plan.md  jupiter_x_implementation_report.md  jupiter_x_nrpn_sysex_implementation_plan.md  jupiter_x_user_guide.md  midi_2_0_api_reference.md  midi_2_0_user_guide.md  midi_2_api_reference.md  midi_2_user_guide.md  nrpn_sysex_architecture.md  production_region_implementation_plan.md  quick-reference.md  (+15 more)
docs/api/: modern-xg-synthesizer.md  overview.md  vibexg.rst
docs/architecture/: overview.md  workstation.md
docs/developer/: architecture.md
docs/engines/: fm-engine.md  physical-engine.md  sf2-engine.md  sfz-engine.md  spectral-engine.md
docs/style_engine/: API_REFERENCE.md  USER_GUIDE.md
docs/tests/: README.md
docs/tools/: cli-reference.md
docs/user/: getting-started.md  troubleshooting.md  user-guide.md
examples/: README.md  electronic_music_example.yaml  fm_x_demo.py  jazz_combo_example.md  jupiter_x_lfo_envelope_demo.py  jupiter_x_modern_synth_integration_demo.py  jv2080_demo.py  motif_arpeggiator_demo.py  production_readiness_demo.py  sf2_comprehensive_test.py  sfz_demo.py  simple_piano.xgdsl  specialized_engines_demo.py  spectral_demo.py  workstation_integration_example.py  xg_gs_mpe_workstation_example.py  xgml_v3_workstation_config.xgml
examples/styles/: edm_pop.yaml  jazz_swing.yaml  jazz_waltz.yaml  latin_pop.yaml  pop_ballad.yaml  rock_standard.yaml
examples/tutorials/: basic-synthesis.md
plans/: cleanup_todo_list.md  synth_package_analysis.md
synth/: AGENTS.md  __init__.py  integration_guide.md  type_defs.py  version.py
synth/audio/: __init__.py  converter.py  engine.py  fast_envelope.py  optimized_engine.py  optimized_envelope.py  resampling.py  sample_cache_manager.py  sample_manager.py  vectorized_engine.py  writer.py
synth/channel/: __init__.py  channel.py  channel_note.py  vectorized_channel_renderer.py
synth/core/: __init__.py  buffer_pool.py  config.py  config_manager.py  constants.py  envelope.py  envelope_block.py  filter.py  optimized_coefficient_manager.py  optimized_synthesizer.py  optimized_xg_synthesizer.py  oscillator.py  panner.py  synthesizer.py  validation.py  vectorized_envelope.py
synth/dsp/: __init__.py
synth/effects/: __init__.py  acoustic_simulator.py  ambience.py  auto_filter.py  auto_pan.py  auto_wah.py  base.py  chorus.py  chorus_modulation.py  chorus_reverb.py  communication.py  compressor.py  constants.py  core.py  cross_delay.py  degrader.py  delay.py  delay_variations.py  detune.py  detune_variation.py  distortion.py  distortion_dynamics.py  echo.py  (+88 more)
tests/: README.md  SUMMARY.md  TEST_SUITE_ASSESSMENT.md  __init__.py  conftest.py  debug_partial_rendering.py  run_tests.py  test_acoustic_behavior_config.py  test_acoustic_behavior_region.py  test_acoustic_channel_context.py  test_acoustic_engine_registration.py  test_acoustic_per_group_tuning.py  test_acoustic_sf2_render_stack.py  test_additive_engine.py  test_audio_io.py  test_buffer_pool.py  test_channel_integration.py  test_comprehensive_sf2_region.py  test_config_comprehensive.py  test_config_manager.py  test_config_system.py  test_convolution_engine.py  test_dsp_pipeline.py  test_edge_cases.py  test_effects_advanced.py  test_effects_chaining.py  test_effects_integration.py  test_effects_regression.py  test_engine_registry.py  test_envelope.py  test_envelope_processing.py  test_error_handling.py  test_fdsp_engine.py  test_filter_advanced.py  test_fm_engine.py  test_granular_engine.py  test_gs_sysex.py  test_gs_sysex_audio_bridge.py  test_gs_sysex_extended.py  test_layered_config.py  (+79 more)
testsuite/: TEST_README.md
vibexg/: __init__.py  __main__.py  audio_outputs.py  cli.py  config.py  demo.py  managers.py  metronome.py  midi_inputs.py  midi_sink.py  recorder.py  threading.py  tui.py  tui_textual.py  types.py  utils.py  workstation.py
vst3_plugin/: .clangd  CMakeLists.txt  ENHANCEMENT_ROADMAP.md  README.md  compile_flags.txt  generate_compile_flags.py
vst3_plugin/Source/: AppConfig.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PythonIntegration.cpp  PythonIntegration.h  XGParameterManager.cpp  XGParameterManager.h
(+615 files in other folders)
