[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xg-synthesizer"
dynamic = ["version"]
authors = [
    {name = "Roger", email = "roger@syxg.dev"},
]
description = "High-performance MIDI XG (eXtended General MIDI) synthesizer implemented in Python with optimized vectorized processing"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
    "Topic :: Multimedia :: Sound/Audio :: Sound Synthesis",
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Environment :: Console",
    "Natural Language :: English",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.21.0,<2.0.0",
    "scipy>=1.7.0,<2.0.0",
    "pydub>=0.25.1,<1.0.0",
    "librosa>=0.9.0,<0.11.0",
    "soundfile>=0.10.3,<0.13.0",
    "av>=9.0.0,<12.0.0",
    "numba>=0.56.0,<0.60.0",
    "psutil>=5.9.0,<6.0.0",
    "mido>=2.0.0,<3.0.0",
    "PyYAML>=6.0,<7.0.0",
    "typing-extensions>=4.0.0,<5.0.0",
    "jsonschema>=4.0.0,<5.0.0",
]
keywords = [
    "audio",
    "synthesizer",
    "midi",
    "xg",
    "soundfont",
    "sf2",
    "music",
    "synthesis",
]

[project.urls]
Homepage = "https://github.com/drbye78/syxg"
Documentation = "https://github.com/drbye78/syxg#readme"
Repository = "https://github.com/drbye78/syxg"
"Bug Reports" = "https://github.com/drbye78/syxg/issues"
Source = "https://github.com/drbye78/syxg"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.10.1",
    "black>=21.0.0",
    "flake8>=3.8.0",
    "mypy>=0.812",
]
performance = [
    "numba>=0.56.0",
]
audio = [
    "pydub>=0.25.1",
    "librosa>=0.9.0",
    "soundfile>=0.10.3",
    "av>=9.0.0",
]
visualization = [
    "matplotlib>=3.3.0",
    "seaborn>=0.11.0",
]

[project.scripts]
render-midi = "render_midi:main"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.dynamic]
version = {attr = "synth.version.__version__"}

[tool.setuptools.packages.find]
# Automatically find packages
